--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     </head>
     <body>
         <div class="app">
+            <div class="topcoat-navigation-bar">
+    <div class="topcoat-navigation-bar__item center full">
+        <h1 class="topcoat-navigation-bar__title">Header</h1>
+    </div>
+</div>
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
