--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         
 
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link href="css/topcoat-mobile-dark.min.css" rel="stylesheet">
         <title>Hello World</title>
     </head>
     <body>
@@ -38,7 +39,7 @@
                     <h1 class="topcoat-navigation-bar__title">Header</h1>
                 </div>
             </div>
-                    
+
         <div class="app">
 
             <h1>PhoneGap</h1>
